# MonSQL-python

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
monsql/: MonSQL.py  __init__.py
